SearchResultContainer: Fixed scrollbar overlap issue with contained data

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4420,7 +4420,7 @@ i.material-icons.close:hover {
   border: 1px solid #14B6E1;
 }
 #bulk_action_form .search_result_container{
-  margin-right: -8px !important;
+  margin-right: 10px !important;
 }
 #main-content .breadcrum-bar.card-white-panel.clearfix .input-field .select-wrapper.initialized input.select-dropdown {
   padding-left: 5px;
